Fix DH parameter extraction in tls.lua (Jacob Gajek)
git-svn-id: https://svn.nmap.org/nmap@34668 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Fix Diffie-Hellman parameter extraction in tls.lua. [Jacob Gajek]
+
 o [NSE] Added http-webdav-scan, which detects WebDAV installations. [Gyanendra Mishra]
-  
 
 o [NSE] Remove ahbl.org checks from dnsbl.lua, since the service was shut down.
   [Forrest B.]
