Fix calculation of namelen param to bind in Ncat. Fixes #166
git-svn-id: https://svn.nmap.org/nmap@34671 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Fix Ncat listen mode on Solaris and other platforms where struct sockaddr
+  does not have a sa_len member. This also affected use of the -p and -s
+  options. Brandon Haberfeld reported the crash. [Daniel Miller]
+
 o [NSE] Fix Diffie-Hellman parameter extraction in tls.lua. [Jacob Gajek]
 
 o [NSE] Added http-webdav-scan, which detects WebDAV installations. [Gyanendra Mishra]
