Remove DYLD_LIBRARY_PATH from zenmap_wrapper.py. Fixes #164
git-svn-id: https://svn.nmap.org/nmap@34732 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#164] Remove the DYLD_LIBRARY_PATH environment variable from
+  zenmap_wrapper.py, addressing a crash with the error
+  "dyld: Symbol not found: _iconv Referenced from: /usr/lib/libcups.2.dylib"
+  Reported by Robert Strom. [Daniel Miller]
+
 o [NSE] Added additional checks for succesful put request in http-put. [Oleg Mitrofanov]
 
 o [NSE] Added an update for http-methods that checks all possible methods not in Allow
