Replace &minus; with '-' in nping docs. Fixes #184
git-svn-id: https://svn.nmap.org/nmap@34863 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/nping/docs/nping.1
+++ b/nping/docs/nping.1
@@ -2,12 +2,12 @@
 .\"     Title: nping
 .\"    Author: [see the "Authors" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 05/31/2015
+.\"      Date: 07/08/2015
 .\"    Manual: Nping Reference Guide
 .\"    Source: Nping
 .\"  Language: English
 .\"
-.TH "NPING" "1" "05/31/2015" "Nping" "Nping Reference Guide"
+.TH "NPING" "1" "07/08/2015" "Nping" "Nping Reference Guide"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -1656,29 +1656,29 @@ or
 \fB\-v\-1\fR\&. These are the available levels:
 .\" verbosity levels of Nping
 .PP
-Level −4
+Level \-4
 .RS 4
-No output at all\&. In some circumstances you may not want Nping to produce any output (like when one of your work mates is watching over your shoulder)\&. In that case level −4 can be useful because although you won\*(Aqt see any response packets, probes will still be sent\&.
+No output at all\&. In some circumstances you may not want Nping to produce any output (like when one of your work mates is watching over your shoulder)\&. In that case level \-4 can be useful because although you won\*(Aqt see any response packets, probes will still be sent\&.
 .RE
 .PP
-Level −3
+Level \-3
 .RS 4
-Like level −4 but displays fatal error messages so you can actually see if Nping is running or it failed due to some error\&.
+Like level \-4 but displays fatal error messages so you can actually see if Nping is running or it failed due to some error\&.
 .RE
 .PP
-Level −2
+Level \-2
 .RS 4
-Like level −3 but also displays warnings and recoverable errors\&.
+Like level \-3 but also displays warnings and recoverable errors\&.
 .RE
 .PP
-Level −1
+Level \-1
 .RS 4
 Displays traditional run\-time information (version, start time, statistics, etc\&.) but does not display sent or received packets\&.
 .RE
 .PP
 Level 0
 .RS 4
-This is the default verbosity level\&. It behaves like level −1 but also displays sent and received packets and some other important information\&.
+This is the default verbosity level\&. It behaves like level \-1 but also displays sent and received packets and some other important information\&.
 .RE
 .PP
 Level 1
