Add DNS improvements to changelog. Closes #51
git-svn-id: https://svn.nmap.org/nmap@35027 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,10 @@ o [NSE] Added script http-svn-enum. Enumerates users of a Subversion
 o [NSE] Added script http-svn-info. Requests information from a
   Subversion repository.[Gyanendra Mishra]
 
+o [GH#51] Added IPv6 support to nmap_mass_rdns, improved reverse DNS cache,
+  and refactored DNS code to improve readability and extensibility.
+  [Gioacchino Mazzurco]
+
 o [NSE] Added NTLM brute support to http-brute. [Gyanendra Mishra]
 
 o [NSE] Added NTLM authentication support to http.lua and a related function to create
