Removed http-email-harest and made changes to CHANGELOG and script.db to show the same.
The new http-grep comitted earlier does what http-email-harvest does
by default(no patterns given).

git-svn-id: https://svn.nmap.org/nmap@35118 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Removed http-email-harvest as the the new http-grep does email address
+  scraping by default. [Gyanendra Mishra]
+
 o [NSE] Added script http-fetch. This script can be used to fetch all files
   from the target, specific files from the target or files that match a  given
   pattern. [Gyanendra Mishra]
