Fix Nmap DTD to account for PCDATA in script element
git-svn-id: https://svn.nmap.org/nmap@35197 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Fix Nmap's DTD, which did not recognize that the script element could contain
+  character data when a script returns a number or a boolean.
+  [Jonathan Daugherty]
+
 o [GH#75] Normalize check targets to standard format check-*.
   [Gioacchino Mazzurco]
 
